fixes to memory and serial annotations make all inner classes static that can be static add @Serial